# ChatBot_1C_v.7

./: .env.example  .gitignore  HISTORY.md  README.md  VERSION  pyproject.toml
.github/workflows/: ci.yml
docs/: assumptions.md  lessons_from_v5.md  project_plan.md  source_inventory.md
docs/adr/: 0001-bounded-llm-and-declarative-skills.md  0002-atomic-hot-reload-skill-packages.md  0003-read-only-1c-query-batches-and-invariant-literals.md  0004-typed-relational-operators.md  0005-local-mcp-proxy.md
docs/architecture/: architecture.md  full_catalog_blueprint.md  implementation_slices.md  integration_contracts.md  persistence_and_observability.md  request_lifecycle.md  requirements_mapping.md  self_review.md  skill_contract.md  slice3_resolver_packages.md
docs/requirements/: acceptance_criteria.md  mvp_skill_catalog_business.md  open_questions.md  product_requirements.md  requirements_traceability.md  skill_catalog.md  slice3_entity_context_requirements.md  slice3_resolver_catalog.md  slice4_operator_requirements.md
docs/testing/: live_environment_checklist.md  release_gates.md  slice1_acceptance_contract.md  slice2_acceptance_contract.md  slice3_acceptance_contract.md  slice3_resolver_acceptance_matrix.md  slice4_acceptance_contract.md  test_case_catalog.md  test_strategy.md
schemas/: evidence.schema.json  planner-output.schema.json  skill-package.schema.json  skill.schema.json
scripts/: build_builtin_skills.py  build_slice1_planner_responses.py  build_slice3_resolver_skills.py  run_slice1_e2e.py  slice1_fixture_server.py
skills/ut-11.5.27.56/: ut.starter.slice-one.package.json  ut.starter.slice-three.package.json  ut.starter.slice-two.package.json  ut115-reference-1.1.0.package.json  ut115-reference-1.1.1.package.json  ut115-reference-existing-upgrade-1.1.0.package.json  ut115-reference-existing-upgrade-1.1.1.package.json  ut115-reference-slice3-additions-1.0.0.package.json  ut115-reference-slice3-additions-1.0.1.package.json  ut115.doc.term.skill.json  ut115.logistics.transfer-list-1.0.0.skill.json  ut115.logistics.transfer-list-1.0.1.skill.json  ut115.purchase.order-list-1.0.0.skill.json  ut115.purchase.order-list-1.0.1.skill.json  ut115.purchase.receipt-list-1.0.0.skill.json  ut115.purchase.receipt-list-1.0.1.skill.json  ut115.ref.cash-desk.enterprise.resolve-1.0.0.skill.json  ut115.ref.cash-desk.enterprise.resolve-1.0.1.skill.json  ut115.ref.cash-desk.pos.resolve-1.0.0.skill.json  ut115.ref.cash-desk.pos.resolve-1.0.1.skill.json  ut115.ref.customer.details-1.0.0.skill.json  ut115.ref.customer.details-1.0.1.skill.json  ut115.ref.customer.resolve-code-exact-1.0.0.skill.json  ut115.ref.customer.resolve-code-exact-1.0.1.skill.json  ut115.ref.customer.resolve-inn-exact-1.0.0.skill.json  ut115.ref.customer.resolve-inn-exact-1.0.1.skill.json  ut115.ref.customer.resolve-name-contains-1.0.0.skill.json  ut115.ref.customer.resolve-name-contains-1.0.1.skill.json  ut115.ref.inventory-purpose.resolve-name-contains-1.0.0.skill.json  ut115.ref.inventory-purpose.resolve-name-contains-1.0.1.skill.json  ut115.ref.item-characteristic.resolve-name-contains-1.0.0.skill.json  ut115.ref.item-characteristic.resolve-name-contains-1.0.1.skill.json  ut115.ref.item-group.resolve-code-exact-1.0.0.skill.json  ut115.ref.item-group.resolve-code-exact-1.0.1.skill.json  ut115.ref.item-group.resolve-name-contains-1.0.0.skill.json  (+56 more)
(+227 files in other folders)
