[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "chatbot1c"
version = "0.1.0a3"
description = "Contract-first assistant for 1C Trade Management"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16,<2",
  "beautifulsoup4>=4.13,<5",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "jsonschema[format]>=4.25,<5",
  "mcp>=1.12,<2",
  "platformdirs>=4.3,<5",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "python-dotenv>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "referencing>=0.36,<1",
  "rfc8785>=0.1.4,<1",
  "semantic-version>=2.10,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.35,<1",
]

[project.scripts]
chatbot1c = "chatbot1c.cli:main"

[dependency-groups]
dev = [
  "mypy==1.17.0",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "pyyaml>=6,<7",
  "respx>=0.22,<1",
  "ruff==0.15.22",
  "types-jsonschema==4.26.0.20260518",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chatbot1c"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "chatbot1c/schemas"
"skills" = "chatbot1c/builtin_skills"

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/VERSION",
  "/pyproject.toml",
  "/schemas",
  "/skills",
  "/src",
  "/typings",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]
markers = [
  "integration: integration boundary tests",
  "blocked: intentionally blocked by an unavailable external dependency",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.12"
mypy_path = ["typings"]
files = ["src"]
strict = true
show_error_codes = true
warn_unreachable = true

[tool.uv]
default-groups = ["dev"]
